# ThreeBodyFractal

./: .gitignore  Draw.m  DrawFrac.m  README.md  Simulator.cpp  Simulator.h  defines.h  drawPath.m  runThreeBody.cpp  threeBodyFast.cpp  updateWindow.m
SimulationStaticLib/: CMakeLists.txt  SimulationStaticLib.cpp  SimulationStaticLib.h
